fixed first column z-index issues in mobile view

--- a/assets/assets/css/main.css
+++ b/assets/assets/css/main.css
@@ -314,6 +314,7 @@ body {
     position: sticky;
     inset-block-start: 0;
     padding: 1em 0;
+    z-index: 995;
   }
 }
 
